--- a/force-app/main/default/layouts/Exercise__c-Exercise Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Exercise__c-Exercise Layout.layout-meta.xml
@@ -15,6 +15,10 @@
                 <behavior>Edit</behavior>
                 <field>Related_muscle__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>URL__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -24,6 +28,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Description__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Image__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
