--- a/force-app/main/default/layouts/Routine__c-Routine Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Routine__c-Routine Layout.layout-meta.xml
@@ -33,6 +33,10 @@
                 <behavior>Edit</behavior>
                 <field>Rest_Sec__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Day_of_execution__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -41,7 +45,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Day_of_execution__c</field>
+                <field>Series__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
