Agregar dia de la semana

--- a/force-app/main/default/layouts/Track__c-Track Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Track__c-Track Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <field>Plan__c</field>
             </layoutItems>
             <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Day_of_the_week__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Session_duration_Min__c</field>
             </layoutItems>
